Update serialization tests for java 8 compatibility (#8)