@@ -1,5 +1,6 @@
 package com.ijioio.aes.sandbox.test;
 
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Paths;
 import java.time.Month;
@@ -30,7 +31,6 @@ public class MapSerializationTest {
 							@Type(name = "java.lang.Object"), @Type(name = "java.lang.Object") }) //
 			} //
 	)
-
 	public static interface MapSerializationPrototype {
 
 		public static final String NAME = "com.ijioio.test.model.MapSerialization";
@@ -72,8 +72,9 @@ public class MapSerializationTest {
 		XmlSerializationHandler handler = new XmlSerializationHandler();
 
 		String actual = XmlUtil.write(handler, model);
-		String expected = Files
-				.readString(Paths.get(getClass().getClassLoader().getResource("map-serialization.xml").toURI()));
+		String expected = new String(
+				Files.readAllBytes(Paths.get(getClass().getClassLoader().getResource("map-serialization.xml").toURI())),
+				StandardCharsets.UTF_8);
 
 		Assertions.assertEquals(expected, actual);
 	}
@@ -84,7 +85,10 @@ public class MapSerializationTest {
 		XmlSerializationHandler handler = new XmlSerializationHandler();
 
 		MapSerialization actual = XmlUtil.read(handler, MapSerialization.class,
-				Files.readString(Paths.get(getClass().getClassLoader().getResource("map-serialization.xml").toURI())));
+				new String(
+						Files.readAllBytes(
+								Paths.get(getClass().getClassLoader().getResource("map-serialization.xml").toURI())),
+						StandardCharsets.UTF_8));
 		MapSerialization expected = model;
 
 		Assertions.assertEquals(expected.getId(), actual.getId());
